compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__doc_comments_snapshots@field.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "struct Foo {\n            /// This is a doc comment\n            pub bar: Int32 = 0;\n        }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId {
            package: PackageId(
                0,
            ),
            index: Idx(
                1,
            ),
        }: Type(
            Struct(
                StructDefinition {
                    id: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Foo",
                                location: <internal>:7:10,
                            },
                            type_arguments: [],
                            location: <internal>:7:10,
                        },
                        location: <internal>:7:10,
                    },
                    visibility: Private,
                    builtin: false,
                    fields: [
                        Field {
                            id: Field(
                                FieldId {
                                    item: ItemId {
                                        package: PackageId(
                                            0,
                                        ),
                                        index: Idx(
                                            1,
                                        ),
                                    },
                                    index: Idx(
                                        0,
                                    ),
                                },
                            ),
                            field_id: None,
                            visibility: Public,
                            name: Identifier {
                                name: "bar",
                                location: <internal>:67:70,
                            },
                            field_type: Type {
                                id: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        6143724420395906933,
                                    ),
                                },
                                name: Path {
                                    root: [
                                        Namespace {
                                            name: Identifier {
                                                name: "std",
                                                location: <internal>:0:0,
                                            },
                                        },
                                    ],
                                    name: Type {
                                        name: Identifier {
                                            name: "Int32",
                                            location: <internal>:72:77,
                                        },
                                        type_arguments: [],
                                        location: <internal>:72:77,
                                    },
                                    location: <internal>:72:77,
                                },
                                location: <internal>:72:77,
                            },
                            default_value: Some(
                                Expression {
                                    id: ExpressionId {
                                        def: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                1,
                                            ),
                                        },
                                        index: Idx(
                                            0,
                                        ),
                                    },
                                    kind: Literal(
                                        Literal {
                                            id: ExpressionId {
                                                def: ItemId {
                                                    package: PackageId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        1,
                                                    ),
                                                },
                                                index: Idx(
                                                    0,
                                                ),
                                            },
                                            kind: Int(
                                                IntLiteral {
                                                    id: ExpressionId {
                                                        def: ItemId {
                                                            package: PackageId(
                                                                0,
                                                            ),
                                                            index: Idx(
                                                                1,
                                                            ),
                                                        },
                                                        index: Idx(
                                                            0,
                                                        ),
                                                    },
                                                    value: 0,
                                                    kind: I32,
                                                },
                                            ),
                                            location: <internal>:80:81,
                                        },
                                    ),
                                    location: <internal>:80:81,
                                },
                            ),
                            location: <internal>:63:82,
                        },
                    ],
                    type_parameters: TypeParameters {
                        inner: [],
                    },
                    location: <internal>:0:92,
                },
            ),
        ),
    },
    statements: {},
    expressions: {
        ExpressionId {
            def: ItemId {
                package: PackageId(
                    0,
                ),
                index: Idx(
                    1,
                ),
            },
            index: Idx(
                0,
            ),
        }: Expression {
            id: ExpressionId {
                def: ItemId {
                    package: PackageId(
                        0,
                    ),
                    index: Idx(
                        1,
                    ),
                },
                index: Idx(
                    0,
                ),
            },
            kind: Literal(
                Literal {
                    id: ExpressionId {
                        def: ItemId {
                            package: PackageId(
                                0,
                            ),
                            index: Idx(
                                1,
                            ),
                        },
                        index: Idx(
                            0,
                        ),
                    },
                    kind: Int(
                        IntLiteral {
                            id: ExpressionId {
                                def: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        1,
                                    ),
                                },
                                index: Idx(
                                    0,
                                ),
                            },
                            value: 0,
                            kind: I32,
                        },
                    ),
                    location: <internal>:80:81,
                },
            ),
            location: <internal>:80:81,
        },
    },
}
