compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__doc_comments_snapshots@function.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "/// This is a doc comment\n        fn foo() -> void { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            17561646994490527473,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    17561646994490527473,
                ),
                func_id: None,
                visibility: Private,
                name: SymbolName {
                    namespace: None,
                    name: Named(
                        Identifier {
                            name: "foo",
                            location: <internal>:37:40,
                        },
                    ),
                    location: <internal>:37:40,
                },
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        id: ItemId(
                            2745571829241957363,
                        ),
                        name: SymbolName {
                            namespace: Some(
                                PathRoot {
                                    segments: [],
                                },
                            ),
                            name: Named(
                                Identifier {
                                    name: "void",
                                    location: <internal>:46:50,
                                },
                            ),
                            location: <internal>:46:50,
                        },
                        type_params: [],
                        location: <internal>:46:50,
                    },
                ),
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:51:54,
                    },
                ),
                location: <internal>:34:54,
            },
        ),
    },
    statements: {},
    expressions: {},
}
