compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__doc_comments_snapshots@method.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "impl Foo {\n            /// This is a doc comment\n            pub fn bar() -> void { }\n        }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            15584863814090437165,
        ): Impl(
            Implementation {
                id: ItemId(
                    15584863814090437165,
                ),
                impl_id: None,
                target: Type {
                    id: ItemId(
                        5175167619020667705,
                    ),
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Foo",
                                location: <internal>:5:8,
                            },
                            type_arguments: [],
                            location: <internal>:5:8,
                        },
                        location: <internal>:5:8,
                    },
                    location: <internal>:5:8,
                },
                methods: [
                    MethodDefinition {
                        id: Method(
                            MethodId {
                                item: ItemId(
                                    15584863814090437165,
                                ),
                                index: Idx(
                                    0,
                                ),
                            },
                        ),
                        method_id: None,
                        visibility: Public,
                        name: Identifier {
                            name: "bar",
                            location: <internal>:68:71,
                        },
                        parameters: [],
                        type_parameters: TypeParameters {
                            inner: [],
                        },
                        return_type: Type {
                            id: ItemId(
                                17666474489655347949,
                            ),
                            name: Path {
                                root: [],
                                name: Type {
                                    name: Identifier {
                                        name: "void",
                                        location: <internal>:77:81,
                                    },
                                    type_arguments: [],
                                    location: <internal>:77:81,
                                },
                                location: <internal>:77:81,
                            },
                            location: <internal>:77:81,
                        },
                        block: Some(
                            Block {
                                statements: [],
                                location: <internal>:82:85,
                            },
                        ),
                        location: <internal>:61:85,
                    },
                ],
                type_parameters: TypeParameters {
                    inner: [],
                },
                location: <internal>:0:95,
            },
        ),
    },
    statements: {},
    expressions: {},
}
