compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__doc_comments_snapshots@struct.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "/// This is a doc comment\n        struct Foo { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            12314200219861369160,
        ): Type(
            Struct(
                StructDefinition {
                    id: ItemId(
                        12314200219861369160,
                    ),
                    type_id: None,
                    name: SymbolName {
                        namespace: None,
                        name: Named(
                            Identifier {
                                name: "Foo",
                                location: <internal>:41:44,
                            },
                        ),
                        location: <internal>:41:44,
                    },
                    builtin: false,
                    properties: [],
                    methods: [],
                    type_parameters: TypeParameters {
                        inner: [],
                    },
                    location: <internal>:34:48,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
