compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__doc_comments_snapshots@trait.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "/// This is a doc comment\n        trait Foo { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId {
            package: PackageId(
                0,
            ),
            index: Idx(
                1,
            ),
        }: Type(
            Trait(
                TraitDefinition {
                    id: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    type_id: None,
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Foo",
                                location: <internal>:40:43,
                            },
                            type_arguments: [],
                            location: <internal>:40:43,
                        },
                        location: <internal>:40:43,
                    },
                    visibility: Private,
                    type_parameters: TypeParameters {
                        inner: [],
                    },
                    methods: [],
                    location: <internal>:34:47,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
