compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__doc_comments_snapshots@trait_method.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "trait Foo {\n            /// This is a doc comment\n            pub fn bar() -> void { }\n        }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            12314200219861369160,
        ): Type(
            Trait(
                TraitDefinition {
                    id: ItemId(
                        12314200219861369160,
                    ),
                    type_id: None,
                    name: SymbolName {
                        namespace: None,
                        name: Identifier {
                            name: "Foo",
                            location: <internal>:6:9,
                        },
                        location: <internal>:6:9,
                    },
                    type_parameters: [],
                    methods: [
                        TraitMethodDefinition {
                            method_id: None,
                            visibility: Public,
                            name: Identifier {
                                name: "bar",
                                location: <internal>:69:72,
                            },
                            parameters: [],
                            type_parameters: [],
                            return_type: Some(
                                Type {
                                    id: ItemId(
                                        9344623788042179276,
                                    ),
                                    name: SymbolName {
                                        namespace: Some(
                                            PathRoot {
                                                segments: [],
                                            },
                                        ),
                                        name: Identifier {
                                            name: "void",
                                            location: <internal>:78:82,
                                        },
                                        location: <internal>:78:82,
                                    },
                                    type_params: [],
                                    location: <internal>:78:82,
                                },
                            ),
                            block: Some(
                                Block {
                                    statements: [],
                                    location: <internal>:83:86,
                                },
                            ),
                            location: <internal>:66:86,
                        },
                    ],
                    location: <internal>:0:96,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
