compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__doc_comments_snapshots@type_alias.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "/// This is a doc comment\n        type Foo = Bar"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            12314200219861369160,
        ): Type(
            Alias(
                AliasDefinition {
                    id: ItemId(
                        12314200219861369160,
                    ),
                    type_id: None,
                    name: SymbolName {
                        namespace: None,
                        name: Identifier {
                            name: "Foo",
                            location: <internal>:39:42,
                        },
                        location: <internal>:39:42,
                    },
                    definition: Type {
                        id: ItemId(
                            4596565343203938484,
                        ),
                        name: SymbolName {
                            namespace: Some(
                                PathRoot {
                                    segments: [],
                                },
                            ),
                            name: Identifier {
                                name: "Bar",
                                location: <internal>:45:48,
                            },
                            location: <internal>:45:48,
                        },
                        type_params: [],
                        location: <internal>:45:48,
                    },
                    location: <internal>:34:48,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
